[package]
name = "jep106-build"
version = "0.1.0"
authors = ["Noah Huesser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2018"
description = "Helper tool to extract JEP106 codes from the provided PDF."
repository = "https://github.com/tiwalun/jep106-parse"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["jep106", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
pdf-extract = { version = "0.7.7" }
regex = "1.10.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.86"
trycmd = "0.15.4"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml", "toml"] }
insta-cmd = "0.6.0"
